tests/typechecker/pass/016-max.hyg
(max(0.0f, 12.3f)): float;
(max(0, 12)): int