tests/typechecker/fail/018-max-mixed-args.hyg
(max(23, 23.0f)): float